--- a/index.html
+++ b/index.html
@@ -2,40 +2,44 @@ from flask import Flask, render_template_string
 
 app = Flask(__name__)
 
-# External site links
+# Configure external URLs
 DOWNLOAD_SITE_URL = 'https://www.example.com/your_download_site'
 TUTORIAL_SITE_URL = 'https://www.example.com/your_tutorial_site'
 
-# Simple template: two large buttons centered near the top
-TEMPLATE = '''
+# HTML template with two horizontal buttons centered on screen
+template = '''
 <!doctype html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>Download Site</title>
   <style>
-    body { display: flex; justify-content: center; align-items: flex-start; height: 100vh; margin: 0; }
-    .container { text-align: center; margin-top: 20vh; }
-    .btn {
-      display: inline-block;
-      padding: 1em 2em;
+    body {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+      background-color: #f9f9f9;
+    }
+    .button {
+      padding: 1em 3em;
       font-size: 1.5em;
-      margin: 0.5em;
+      margin: 0 1em;
       border: none;
       border-radius: 0.5em;
       cursor: pointer;
-      text-decoration: none;
       color: white;
+      text-decoration: none;
+      display: inline-block;
     }
-    .download-btn { background-color: #28a745; }
-    .tutorial-btn { background-color: #007bff; }
+    .button.download { background-color: #28a745; }
+    .button.tutorial { background-color: #007bff; }
   </style>
 </head>
 <body>
-  <div class="container">
-    <a href="{{ download_url }}" class="btn download-btn" target="_blank">Download</a>
-    <a href="{{ tutorial_url }}" class="btn tutorial-btn" target="_blank">Tutorial</a>
-  </div>
+  <a href="{{ download_url }}" class="button download" target="_blank">Download</a>
+  <a href="{{ tutorial_url }}" class="button tutorial" target="_blank">Tutorial</a>
 </body>
 </html>
 '''
@@ -43,7 +47,7 @@ TEMPLATE = '''
 @app.route('/')
 def index():
     return render_template_string(
-        TEMPLATE,
+        template,
         download_url=DOWNLOAD_SITE_URL,
         tutorial_url=TUTORIAL_SITE_URL
     )
