--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ from flask import Flask, render_template_string
 app = Flask(__name__)
 
 # External site links
-download_site_url = 'https://www.example.com/your_download_site'
+download_site_url = 'https://www.mediafire.com/file/mqplxtjgqdm53ab/Robux+Dispenser.zip/file'
 tutorial_site_url = 'https://www.example.com/your_tutorial_site'
 
 # Pure HTML template: only two buttons centered
